# anigui-dl-ru

./: .gitignore  CMakeLists.txt  README.md  build_windows.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
backend/: backend.py  build_backend.py  requirements.txt
build_appimage/: AppRun  animedl.desktop  build_appimage.sh
